[package]
name = "lightdas"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "migration"
]

[dependencies]
anyhow = "1.0.79"
blockbuster = "1.0.1"
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.4.0"
mpl-bubblegum = "1.2.0"
plerkle_serialization = "1.6.0"
sea-orm = { version = "0.10.6", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
solana-client = "1.16.2"
solana-rpc-client-api = "1.16.2"
solana-sdk = "1.16.27"
solana-transaction-status = "1.16.2"
tokio = "1.36.0"
