[package]
name = "lightdas"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "migration",
    "digital_asset_types",
    "program_transformers"
]

[dependencies]
anyhow = {workspace=true}
blockbuster = {workspace=true}
digital_asset_types = { workspace = true, features = ["json_types", "sql_types"] }
dotenv = {workspace=true}
futures = {workspace=true}
lazy_static = {workspace=true}
mpl-bubblegum = {workspace=true}
plerkle_serialization = {workspace=true}
sea-orm = { workspace=true, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"] }
solana-client = {workspace=true}
solana-rpc-client-api = {workspace=true}
solana-sdk = {workspace=true}
solana-transaction-status = {workspace=true}
sqlx = {workspace=true}
tokio = {workspace=true}
log ={workspace=true}
async-trait = {workspace=true}
borsh = {workspace=true}
borsh-derive = {workspace=true}
bs58 = {workspace=true}
indexmap ={workspace=true}
jsonpath_lib = {workspace=true}
mime_guess = {workspace=true}
num-derive = {workspace=true}
num-traits = {workspace=true}
program_transformers = { workspace = true }
schemars = {workspace=true}
schemars_derive = {workspace=true}
sea-query = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
spl-concurrent-merkle-tree = {workspace=true}
thiserror = {workspace=true}
url = {workspace=true}



[[bin]]
name = "src"
path = "src/main.rs"

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/WilfredAlmeida/LightDAS"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.79"
blockbuster = {git="https://github.com/rpcpool/blockbuster", branch="rm-plerkle-101"}
cadence = "0.29.0"
cadence-macros = "0.29.0"
dotenv = "0.15.0"
digital_asset_types = { path = "digital_asset_types" }
futures = "0.3.28"
lazy_static = "1.4.0"
mpl-bubblegum = "1.2.0"
plerkle_serialization = "1.6.0"
sea-orm = { version = "0.10.6", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"] }
solana-client = "1.16.2"
solana-rpc-client-api = "1.16.2"
solana-sdk = "1.16.27"
solana-transaction-status = "1.16.2"
sqlx = "0.6.2"
tokio = "1.30.0"
log = "0.4.17"
async-trait = "0.1.60"
borsh = "~0.10.3"
borsh-derive = "~0.10.3"
bs58 = "0.4.0"
indexmap = "1.9.3"
jsonpath_lib = "0.3.0"
mime_guess = "2.0.4"
num-derive = "0.3.3"
num-traits = "0.2.15"
program_transformers = { path = "program_transformers" }
schemars = "0.8.6"
schemars_derive = "0.8.6"
sea-query = "0.28.1"
serde = "1.0.137"
serde_json = "1.0.81"
spl-concurrent-merkle-tree = "0.2.0"
spl-account-compression = "0.2.0"
spl-token = ">= 3.5.0, < 5.0"
thiserror = "1.0.31"
tracing = "0.1.35"
url = "2.3.1"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
