[package]
name = "lightdas"
version = "0.2.0"
edition = "2021"

[workspace]
members = [
    "migration",
    "digital_asset_types",
    "program_transformers",
    "blockbuster",
    "core",
    "bubblegum-backfill"
]

[dependencies]
anchor-lang = {workspace=true}
anyhow = {workspace=true}
digital_asset_types = { workspace = true, features = ["json_types", "sql_types"] }
dotenv = {workspace=true}
futures = {workspace=true}
lazy_static = {workspace=true}
mpl-bubblegum = {workspace=true}
plerkle_serialization = {workspace=true}
sea-orm = { workspace=true, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"] }
solana-client = {workspace=true}
solana-rpc-client-api = {workspace=true}
solana-sdk = {workspace=true}
solana-transaction-status = {workspace=true}
sqlx = {workspace=true}
tokio = {workspace=true}
log ={workspace=true}
async-trait = {workspace=true}
borsh = {workspace=true}
borsh-derive = {workspace=true}
bs58 = {workspace=true}
indexmap ={workspace=true}
jsonpath_lib = {workspace=true}
mime_guess = {workspace=true}
num-derive = {workspace=true}
num-traits = {workspace=true}
program_transformers = { workspace = true }
schemars = {workspace=true}
schemars_derive = {workspace=true}
sea-query = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
spl-concurrent-merkle-tree = {workspace=true}
thiserror = {workspace=true}
url = {workspace=true}
das-core = {workspace=true}
heck = {workspace=true}
backon = {workspace=true}
clap = {workspace=true}
derive_more = {workspace=true}
figment = {workspace=true}
indicatif = {workspace=true}
plerkle_messenger = {workspace=true}
reqwest = {workspace=true}
solana-account-decoder = {workspace=true}
bytemuck = {workspace=true}
mpl-core = {workspace=true}
mpl-token-metadata = {workspace=true}
solana-zk-token-sdk = {workspace=true}
spl-noop = {workspace=true}
spl-pod = {workspace=true}
anchor-client = {workspace=true}
spl-token-2022  = {workspace=true}
spl-token-group-interface  = {workspace=true}
das-bubblegum-backfill = {workspace=true}
spl-token-metadata-interface = {workspace=true}
flatbuffers = {workspace=true}
rand = {workspace=true}
solana-geyser-plugin-interface = {workspace=true}
solana-program = {workspace=true}
blockbuster = {workspace=true}
signal-hook = {workspace=true}
base64 = {workspace=true}


[[bin]]
name = "src"
path = "src/main.rs"

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/WilfredAlmeida/LightDAS"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
blockbuster = { path = "blockbuster" }
cadence = "0.29.1"
cadence-macros = "0.29.1"
dotenv = "0.15.0"
digital_asset_types = { path = "digital_asset_types" }
futures = "0.3.30"
lazy_static = "1.5.0"
mpl-bubblegum = "1.4.0"
plerkle_serialization = "1.8.0"
sea-orm = { version = "0.10.7", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "mock"] }
solana-client = "~1.17"
solana-rpc-client-api = "~1.17"
solana-sdk = "~1.17"
solana-transaction-status = "~1.17"
sqlx = "0.6.3"
tokio = "1.38.0"
log = "0.4.22"
async-trait = "0.1.80"
borsh = "~0.10.3"
borsh-derive = "~0.10.3"
bs58 = "0.4.0"
indexmap = "1.9.3"
jsonpath_lib = "0.3.0"
mime_guess = "2.0.4"
num-derive = "0.3.3"
num-traits = "0.2.19"
program_transformers = { path = "program_transformers" }
das-bubblegum-backfill = { path = "bubblegum-backfill" }
das-core = { path = "core" }
schemars = "0.8.21"
schemars_derive = "0.8.21"
sea-query = "0.28.5"
serde = "1.0.203"
serde_json = "1.0.118"
spl-concurrent-merkle-tree = "0.2.0"
spl-account-compression = "0.3.0"
spl-token = ">= 3.5.0, < 5.0"
thiserror = "1.0.61"
tracing = "0.1.40"
url = "2.5.2"
heck = "0.5.0"
backon = "0.4.4"
clap = "4.5.7"
derive_more = { version = "0.99.18" }
figment = "0.10.19"
indicatif = "0.17.8"
plerkle_messenger = "1.8.0"
reqwest = "0.11.27"
signal-hook = "0.3.17"
solana-account-decoder = "~1.17"
bytemuck = { version = "1.16.1", features = ["derive"] }
mpl-core = { version = "0.7.1", features = ["serde"] }
mpl-token-metadata = "4.1.2"
solana-zk-token-sdk = "~1.17"
spl-noop = "0.2.0"
spl-pod = { version = "0.1.0", features = ["serde-traits"] }


spl-token-metadata-interface = "0.2.0"
flatbuffers = "23.5.26"
rand = "0.8.5"
solana-geyser-plugin-interface = "~1.17"
solana-program = "~1.17"
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
spl-token-group-interface = "0.1.0"


[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
